crates/toml_edit/fixtures/invalid/float/us-before-point.stderr
TOML parse error at line 1, column 21
  |
1 | us-before-point = 1_.2
  |                     ^
Invalid integer
Expected digit
